GearsetPOC/force-app/main/default/objects/Metafour_Bike_Availability_Log_Details__c/Metafour_Bike_Availability_Log_Details__c.object-meta.xml
<CustomObject>
    <label>Metafour_Bike Availability Log Details</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Metafour_Bike Availability Log Details N</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metafour_Bike Availability Log Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>