GearsetPOC/force-app/main/default/objects/Metafour_Bike_Availability_Log_Details__c/fields/Bike_or_Luggage__c.field-meta.xml
<CustomField>
    <fullName>Bike_or_Luggage__c</fullName>
    <description>for Metafour Luggage Booking</description>
    <label>Bike or Luggage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bike</fullName>
            </value>
            <value>
                <fullName>Luggage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>