GearsetPOC/force-app/main/default/objects/Metafour_Bike_Availability_Log_Details__c/fields/Booked_Boxed_Space__c.field-meta.xml
<CustomField>
    <fullName>Booked_Boxed_Space__c</fullName>
    <label>Booked Boxed Space</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>