GearsetPOC/force-app/main/default/objects/Metafour_Bike_Availability_Log_Details__c/fields/From_Station__c.field-meta.xml
<CustomField>
    <fullName>From_Station__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Station</label>
    <referenceTo>Stations__c</referenceTo>
    <relationshipLabel>Metafour_Bike Availability Log Details</relationshipLabel>
    <relationshipName>Metafour_Bike_Availability_Log_Details</relationshipName>
    <type>Lookup</type>
</CustomField>