GearsetPOC/force-app/main/default/objects/Metafour_Bike_Availability_Log_Details__c/fields/Luggauge_Type__c.field-meta.xml
<CustomField>
    <fullName>Luggauge_Type__c</fullName>
    <label>Luggauge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assembled</fullName>
            </value>
            <value>
                <fullName>Boxed</fullName>
            </value>
            <value>
                <fullName>Excess Luggage Under 85</fullName>
            </value>
            <value>
                <fullName>Excess Luggage Over 85</fullName>
            </value>
            <value>
                <fullName>Group Luggage</fullName>
            </value>
            <value>
                <fullName>VIP Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>