GearsetPOC/force-app/main/default/objects/Metafour_Bike_Availability_Log_Details__c/fields/Metafour_Bike_Availability_Logs_Id__c.field-meta.xml
<CustomField>
    <fullName>Metafour_Bike_Availability_Logs_Id__c</fullName>
    <label>Metafour_Bike Availability Logs Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>