GearsetPOC/force-app/main/default/objects/Metafour_Bike_Availability_Log_Details__c/fields/Minutes_Since_Modified_c__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Since_Modified_c__c</fullName>
    <formula>(NOW() - CreatedDate) * 24 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minutes_Since_Modified__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>