GearsetPOC/force-app/main/default/objects/Metafour_Bike_Availability_Log_Details__c/fields/Number_of_Spaces__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Spaces__c</fullName>
    <label>Number of Spaces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>