GearsetPOC/force-app/main/default/objects/Metafour_Bike_Availability_Log_Details__c/fields/To_Station__c.field-meta.xml
<CustomField>
    <fullName>To_Station__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Station</label>
    <referenceTo>Stations__c</referenceTo>
    <relationshipLabel>Metafour_Bike Availability Log Details (To Station)</relationshipLabel>
    <relationshipName>Metafour_Bike_Availability_Log_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>