GearsetPOC/force-app/main/default/objects/Metafour_Bike_Availability_Log_Details__c/fields/Train_Date__c.field-meta.xml
<CustomField>
    <fullName>Train_Date__c</fullName>
    <label>Train Date</label>
    <type>Date</type>
</CustomField>