GearsetPOC/force-app/main/default/objects/Metafour_Bike_Availability_Log_Details__c/fields/Unconfirmed_Boxed_Space__c.field-meta.xml
<CustomField>
    <fullName>Unconfirmed_Boxed_Space__c</fullName>
    <label>Unconfirmed Boxed Space</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>